src/test/ui/rfc-2091-track-caller/error-extern-fn.stderr
error[E0738]: `#[track_caller]` is not supported on foreign functions
  --> $DIR/error-extern-fn.rs:5:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0738`.
